Add language localization for OpponentsViewController.

--- a/BibleBeatMe/en.lproj/Localizable.strings
+++ b/BibleBeatMe/en.lproj/Localizable.strings
@@ -35,6 +35,7 @@
 // OpponentsViewController
 "selectOpponent"= "Select opponent";
 "someoneWait"   = "Someone is waiting for you";
+"online"        = "Online";
 
 // OpponentViewController
 
